added header section

--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="Styles/gamer.css">
 </head>
+
 <body>
     <header>
+        <!-- header section start -->
+        <nav>
+            <div class="nav-container">
+            <div class="logo-container">
+                <img src="images/Frame.png" alt="">
+                <h2 class="nav-title">G<span>amer</span></h2>
+            </div>
+            <div class="nav-items-container">
+                <a href="">About Us</a>
+                <a href="">Developers</a>
+                <a href="">Follow Us On</a>
+
+            </div>
+        </div>
+        </nav>
 
     </header>
-    
+
     <main>
+
 
     </main>
 
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
