--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="Styles/gamer.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -13,17 +17,25 @@
         <!-- header section start -->
         <nav>
             <div class="nav-container">
-            <div class="logo-container">
-                <img src="images/Frame.png" alt="">
-                <h2 class="nav-title">G<span>amer</span></h2>
-            </div>
-            <div class="nav-items-container">
-                <a href="">About Us</a>
-                <a href="">Developers</a>
-                <a href="">Follow Us On</a>
+                <div class="logo-container">
+                    <img src="images/Frame.png" alt="">
+                    <h2 class="nav-title">G<span>amer</span></h2>
+                </div>
+                <div class="nav-items-container">
+                    <a href="">About Us</a>
+                    <a href="">Developers</a>
+                    <div id="nav-menu-icon">
+                        <a href="">Follow Us On <span id="youtube-icon"><i class="fa-brands fa-youtube"></i></span>
+                            <span id="tiktok-icon">
+                                <i class="fa-brands fa-tiktok"></i>
+                            </span>
 
+                    </div>
+
+
+
+                </div>
             </div>
-        </div>
         </nav>
 
     </header>
