added banner section

--- a/index.html
+++ b/index.html
@@ -25,29 +25,41 @@
                     <a href="">About Us</a>
                     <a href="">Developers</a>
                     <div id="nav-menu-icon">
-                        <a href="">Follow Us On <span id="youtube-icon"><i class="fa-brands fa-youtube"></i></span>
+                        <a href="">Follow Us On<span id="youtube-icon"><i class="fa-brands fa-youtube"></i></span>
                             <span id="tiktok-icon">
                                 <i class="fa-brands fa-tiktok"></i>
                             </span>
-
+                        </a>
                     </div>
-
-
-
                 </div>
             </div>
         </nav>
 
     </header>
-
     <main>
+        <section class="banner-container">
+            <div class="banner-content">
+                <h3 class="banner-headline">PLAY LIKE THE</h3>
+                <h1 class="banner-title">G.O.A.T</h1>
+                <div class="banner-para">
+                    <div><p>1-Click instant play</p></div>
+                    <div><p>No Download</p></div>
+                    <div><p>1000s of supported online games</p></div>
+                </div>
+                <div class="btn-section">
+                    <button class="btn-primary">SIGN IN</button>
+                    <button class="btn-secndory">GO ROGUE</button>
+                </div>
 
+
+            </div>
+            <div class="img-container">
+                <img class="banner-img" src="images/Group 18.png" alt="">
+            </div>
+
+        </section>
 
     </main>
-
-    <footer>
-
-    </footer>
 
 </body>
 
