added gamer section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
                 <h3 class="banner-headline">PLAY LIKE THE</h3>
                 <h1 class="banner-title">G.O.A.T</h1>
                 <div class="banner-para">
-                    <div><p>1-Click instant play</p></div>
-                    <div><p>No Download</p></div>
-                    <div><p>1000s of supported online games</p></div>
+                    <div>
+                        <p>1-Click instant play</p>
+                    </div>
+                    <div>
+                        <p>No Download</p>
+                    </div>
+                    <div>
+                        <p>1000s of supported online games</p>
+                    </div>
                 </div>
                 <div class="btn-section">
                     <button class="btn-primary">SIGN IN</button>
@@ -57,6 +63,28 @@
                 <img class="banner-img" src="images/Group 18.png" alt="">
             </div>
 
+        </section>
+        <section class="gamer-section">
+            <div class="gamer-container">
+                <div class="gamer-img">
+                    <img src="images/pngwing 4.png" alt="">
+
+                </div>
+                <div class="gamer-content">
+                    <h3 class="gamer-title">
+                        We are gamer
+                    </h3>
+                    <p class="gamer-para">
+                        An international digital games and entertainment company. We develop, publish and distribute
+                        multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                        growing.
+                    </p>
+                    <button class="btn-primary">know more</button>
+                    <p class="gamer-ends-line">Our purpose...
+                    <h4>“unleash the gamer in everyone”</h3>
+                        </p>
+                </div>
+            </div>
         </section>
 
     </main>
