--- a/index.html
+++ b/index.html
@@ -86,6 +86,36 @@
                 </div>
             </div>
         </section>
+        <section class="online-games-container">
+            <div class="online-games-contant">
+                <h2 class="games-title">
+                    Online Games <span class="gamer-title">Funny Videos</span>
+                </h2>
+                <p class="online-games-para">
+                    A Collection of Hilarious Videos to Brighten Your Day
+                </p>
+            </div>
+            <div class="games-card-container">
+                <div>
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div>
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+
+            </div>
+
+        </section>
 
     </main>
 
