added play instant section

--- a/index.html
+++ b/index.html
@@ -116,9 +116,22 @@
             </div>
 
         </section>
+        <section class="play-instant-section">
+            <div class="play-instant-content">
+                <h2 class="games-title">
+                    <span class="gamer-title">Play Instantly,</span><br>No Downloads
+                    No Installs.
+                </h2>
+                <p class="online-games-para">
+                    Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                </p>
+            </div>
+            <div class="play-instant-img">
+<img class="img-primary" src="images/Rectangle 55.png" alt="">
+<img class="img-secondary" src="images/Rectangle 66.png" alt="">
+            </div>
+        </section>
 
     </main>
-
 </body>
-
 </html>
