--- a/index.html
+++ b/index.html
@@ -123,15 +123,105 @@
                     No Installs.
                 </h2>
                 <p class="online-games-para">
-                    Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+                    Play games online for free without downloading. Just click the Play button and play instantly in
+                    your browser.
                 </p>
             </div>
             <div class="play-instant-img">
-<img class="img-primary" src="images/Rectangle 55.png" alt="">
-<img class="img-secondary" src="images/Rectangle 66.png" alt="">
+                <img class="img-primary" src="images/Rectangle 55.png" alt="">
+                <img class="img-secondary" src="images/Rectangle 66.png" alt="">
             </div>
         </section>
+        <section class="popular-games-container">
 
+            <div class="popular-games">
+
+                <div class="game-1">
+                    <img src="images/Rectangle 11.png" alt="">
+                    <h4>Action Games</h>
+                </div>
+                <div class="game-2">
+                    <img src="images/Rectangle 12.png" alt="">
+                    <h4>Adventure Games</h4>
+                </div>
+                <div class="game-3">
+                    <img src="images/Rectangle 13.png" alt="">
+                    <h4>Arcade Games</h4>
+                </div>
+                <div class="game-4">
+                    <img src="images/Rectangle 14.png" alt="">
+                    <h4>Educational Games</h4>
+                </div>
+                <div class="game-5">
+                    <img src="images/Rectangle 15.png" alt="">
+                    <h4>Word Games</h4>
+                </div>
+                <div class="game-6">
+                    <img src="images/Rectangle 16.png" alt="">
+                    <h4>Role Playing Games</h4>
+                </div>
+                <div class="game-7">
+                    <img src="images/Rectangle 17.png" alt="">
+                    <h4>Music & Audio Games</h4>
+                </div>
+                <div class="game-8">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <h4>Puzzle Games</h4>
+                </div>
+                <div class="game-9">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <h4>Strategy Games</h4>
+                </div>
+
+            </div>
+
+        </section>
     </main>
+    <footer>
+        <section class="footer-section">
+            <div class="footer-container">
+                <img class="footer-img" src="images/Frame.png" alt="">
+                <h2 class="footer-title">G<span>amer</span></h2>
+            </div>
+
+            <div class="footer-menu">
+                <ul>
+                    <li>Our Story</li>
+                    <li>Games</li>
+                    <li>Web Games</li>
+                    <li>Careers</li>
+                    <li>Support</li>
+                    <li>My Account</li>
+                </ul>
+
+            </div>
+
+        </section>
+        <section class="icon-section">
+            <div><i class="fa-brands fa-twitter"></i></div>
+            <div><i class="fa-brands fa-facebook"></i></div>
+            <div><i class="fa-brands fa-youtube"></i></div>
+            <div><i class="fa-brands fa-linkedin"></i></div>
+            <div><i class="fa-brands fa-instagram"></i></div>
+            <div><i class="fa-brands fa-apple"></i></div>
+        </section>
+
+        <div class="policy-section">
+            <small>
+                <ul>
+                    <li>Terms and Conditions</li>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li>Privacy Settings</li>
+
+                </ul>
+            </small>
+            <small>
+                Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+            </small>
+        </div>
+
+    </footer>
 </body>
+
 </html>
