--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <h1 class="banner-title">G.O.A.T</h1>
                 <div class="banner-para">
                     <div>
-                        <p>1-Click instant play</p>
+                        <p> <span id="span-icon"><i class="fa-solid fa-play"></i></span> 1-Click instant play</p>
                     </div>
                     <div>
-                        <p>No Download</p>
+                        <p><span id="span-icon"><i class="fa-solid fa-download"></i></span>No Download</p>
                     </div>
                     <div>
-                        <p>1000s of supported online games</p>
+                        <p><span id="span-icon"><i class="fa-solid fa-people-arrows"></i></span> 1000s of supported online games</p>
                     </div>
                 </div>
                 <div class="btn-section">
