--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
             </div>
             <div class="games-card-container">
                 <div>
-                    <img src="images/Rectangle 4.png" alt="">
+                    <img class="games-play-btn" src="images/Rectangle 4.png" alt="">
                     <p>No Download. No Installs. Play <br> games Instantly on Gamer.</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 5.png" alt="">
+                    <img class="games-play-btn" src="images/Rectangle 5.png" alt="">
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 7.png" alt="">
+                    <img class="games-play-btn" src="images/Rectangle 7.png" alt="">
                     <p>Breaking game records like OG</p>
                 </div>
                 <div>
-                    <img src="images/Rectangle 6.png" alt="">
+                    <img class="games-play-btn" src="images/Rectangle 6.png" alt="">
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
 
