--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="icon" type="images" href="/images/Frame.png">
     <link rel="stylesheet" href="Styles/gamer.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -49,7 +50,8 @@
                         <p><span id="span-icon"><i class="fa-solid fa-download"></i></span>No Download</p>
                     </div>
                     <div>
-                        <p><span id="span-icon"><i class="fa-solid fa-people-arrows"></i></span> 1000s of supported online games</p>
+                        <p><span id="span-icon"><i class="fa-solid fa-people-arrows"></i></span> 1000s of supported
+                            online games</p>
                     </div>
                 </div>
                 <div class="btn-section">
@@ -102,14 +104,17 @@
                 </div>
                 <div>
                     <img class="games-play-btn" src="images/Rectangle 5.png" alt="">
+
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div>
                     <img class="games-play-btn" src="images/Rectangle 7.png" alt="">
+
                     <p>Breaking game records like OG</p>
                 </div>
                 <div>
                     <img class="games-play-btn" src="images/Rectangle 6.png" alt="">
+
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
 
